--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -20,5 +20,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@vitalyrudenko/templater": "^1.0.0-pre.5",
+		"zod": "^3.23.8"
 	}
 }
