--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -2,8 +2,9 @@
 	"name": "declutter-me-obsidian-plugin",
 	"version": "0.1.0",
 	"description": "Gateway for your notes",
-	"main": "main.js",
+	"main": "dist/main.js",
 	"scripts": {
+		"test": "jest --coverage",
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
@@ -12,12 +13,17 @@
 	"author": "Vitaly Rudenko",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/common-tags": "^1.8.4",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
+		"common-tags": "^1.8.2",
 		"esbuild": "0.17.3",
+		"jest": "^29.7.0",
 		"obsidian": "latest",
+		"ts-jest": "^29.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
