Custom variables, device name, reset button

--- a/obsidian-plugin/tsconfig.json
+++ b/obsidian-plugin/tsconfig.json
@@ -18,6 +18,10 @@
       "ES5",
       "ES6",
       "ES7",
+    ],
+    "types": [
+      "obsidian-typings",
+      "jest"
     ]
   },
   "include": [
