--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -23,6 +23,7 @@
 		"esbuild": "0.17.3",
 		"jest": "^29.7.0",
 		"obsidian": "latest",
+		"obsidian-typings": "^2.3.4",
 		"ts-jest": "^29.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
